@@ -3,6 +3,7 @@
 # See also LICENSE.txt
 
 from zeit.content.cp.i18n import MessageFactory as _
+import lxml.objectify
 import zeit.content.cp.blocks.block
 import zeit.content.cp.interfaces
 import zope.container.interfaces
@@ -15,5 +16,15 @@ class XMLBlock(zeit.content.cp.blocks.block.Block):
         zope.container.interfaces.IContained)
 
 
-XMLBlockFactory = zeit.content.cp.blocks.block.elementFactoryFactory(
-    zeit.content.cp.interfaces.IRegion, 'xml', _('Raw XML block'))
+class XMLBlockFactory(zeit.content.cp.blocks.block.ElementFactory):
+
+    zope.component.adapts(zeit.content.cp.interfaces.IRegion)
+    element_type = module = 'xml'
+    title = _('Raw XML block')
+
+    def get_xml(self):
+        container = super(XMLBlockFactory, self).get_xml()
+        raw = lxml.objectify.E.raw(u'\n\n\n')
+        lxml.objectify.deannotate(raw)
+        container.append(raw)
+        return container
